# Quixand

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  test.ipynb  test.py
env_templates/agentgym/: Dockerfile  env.py  install_env.py
env_templates/ridges/: Dockerfile  api_server.py  env.py
env_templates/sat/: Dockerfile  env.py
examples/: agentgym_alfworld.py  agentgym_webshop.py  async_minimal.py  basic_test.py  docker_basic.py  file_operations.py  minimal.py  podman_basic.py  resource_limits.py  ridges_agent_simple.py  streaming.py  template_build.py
quicksand/: config.py  types.py
quicksand/adapters/: local_docker.py
quicksand/cli/: main.py
quicksand/core/: processes.py  sandbox.py  templates.py
quixand/: __init__.py  config.py  errors.py
quixand/adapters/: __init__.py  base.py  chutes.py  local_docker.py  remote_http.py
quixand/cli/: main.py
quixand/container/: __init__.py  base.py  docker_runtime.py  podman_runtime.py
quixand/core/: code.py  files.py  lifecycle.py  playground.py  processes.py  proxy.py  sandbox.py  sandbox_async.py  templates.py  watchdog.py
quixand/utils/: docker_utils.py  fs.py  proc.py  stream.py
tests/: conftest.py  test.sh  test_dind.py  test_readme_commands.py
